--- a/test/test.html
+++ b/test/test.html
@@ -3,91 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Opentype test</title>
-
-<style>
-
-        @font-face {
-            font-family: "Kikakui Sans";
-            src: url("KikakuiSans.ot.ttf");
-          }
-
-
-        body {
-            font-family: 'Noto Sans', sans-serif;
-            background-color: grey;
-            margin: 0;
-            padding: 0;
-        }
-
-        #fonttest {
-            width: 80%;
-            margin-left: auto;
-            margin-right: auto;
-            background-color: white;
-            /* padding: 5px; */
-        }
-
-        h1, h2 {
-            text-align : center;
-        }
-        .kikakui, .sample, .note {
-            font-family: 'Kikakui Sans';
-        }
-
-        .kikakui, .sample {
-            font-size: 2.5em;
-        }
-
-        .sample {
-            letter-spacing: 0.5em;
-            background-color: silver;
-
-        }
-
-        /* U+1E800 - ki  */
-        .cv00 {
-            -webkit-font-feature-settings: "cv00" 1;
-            font-feature-settings: "cv00" 1;
-        }
-
-        /* U+1E801 - ka */
-        .cv01 {
-            -webkit-font-feature-settings: "cv01" 1;
-            font-feature-settings: "cv01" 1;
-        }
-
-        /* U+1E802 - ku */
-        .cv02 {
-            -webkit-font-feature-settings: "cv02" 1;
-            font-feature-settings: "cv02" 1;
-        }
-
-        /* U+1E803 - ke */
-        .cv03 {
-            -webkit-font-feature-settings: "cv03" 1;
-            font-feature-settings: "cv03" 1;
-        }
-
-        /* U+1E804 - kɛ */
-        .cv04 {
-            -webkit-font-feature-settings: "cv04" 1;
-            font-feature-settings: "cv04" 1;
-        }
-
-        /* U+1E805 - ko */
-        .cv05 {
-            -webkit-font-feature-settings: "cv05" 1;
-            font-feature-settings: "cv05" 1;
-        }
-
-        /* U+1E806 - kɔ */
-        .cv06 {
-            -webkit-font-feature-settings: "cv06" 1;
-            font-feature-settings: "cv06" 1;
-        }
-
-
-</style>
+<link href="../stylesheets/test.css" type="text/css" rel="stylesheet">
 </head>
 <body>
 <div id="fonttest">
