Added domready.js and fixed link to style sheet in char picker

--- a/tools/index.html
+++ b/tools/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../stylesheets/github-light.css" media="screen">
     <link rel="stylesheet" type="text/css" href="../stylesheets/picker.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/bassa-vah.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/mende-kikakui.css" media="screen">
     <script type="text/javascript" src="../js/domready.js"></script>
     <script src="characterPicker.js" type="text/javascript"></script>
   </head>
