Fixed bug in test-new.html, calling worng fuction.

--- a/test/test-new.html
+++ b/test/test-new.html
@@ -22,7 +22,7 @@
 <script src="../js/jquery.mlwt.js"></script>
 <script src="../js/mlwt.fonts.js"></script>
 <script>
-    $( document ).ready( elBidiOverride() );
+    $( document ).ready( elBDO() );
 </script>
 </body>
 </html>
