Fixed link to font in documentation

--- a/test/mende-kikakui-notes.html
+++ b/test/mende-kikakui-notes.html
@@ -6,7 +6,7 @@
 <style>
         @font-face {
             font-family:"Kikakui Sans Pro";
-            src:url("KiKaKuiSansPro.ot.ttf");
+            src:url("../fonts/KikakuiSansPro.ot.ttf");
             font-style:normal;
             font-weight:400;
         }
