tweaked css for IE11 support for notes

--- a/test/mende-kikakui-notes.html
+++ b/test/mende-kikakui-notes.html
@@ -21,13 +21,16 @@
 
 
         .ss01, .ss01_1 {
+            -ms-font-feature-settings: "ss01" 1;
             font-feature-settings: "ss01" 1;
         }
 
         .ss01_0 {
+            -ms-font-feature-settings: "ss01" 0;
             font-feature-settings: "ss01" 0;
         }
         .dalbyAlt {
+            -ms-font-feature-settings: "ss01" 1;
             font-feature-settings: "ss01" 1;
         }
 </style>
